# apt-listchanges

./: .gitignore  DebianControlParser.py  Makefile  Makefile.am  TODO  __init__.py  a.tailor  apt-listchanges  apt-listchanges.es.1  apt-listchanges.es.sgml  apt-listchanges.fr.1  apt-listchanges.fr.sgml  apt-listchanges.in  apt-listchanges.it.sgml  apt-listchanges.py  apt-listchanges.sgml  apt_listchanges.py  browser-pipe  configure.in
apt-listchanges/: ALCConfig.py  ALChacks.py  AptListChangesGtk.py  ControlParser.py  DebianControlParser.py  DebianFiles.py  apt-listchanges.glade  apt-listchanges.ui  apt_listchanges.py
apt_listchanges/: DebianControlParser.py  apt_listchanges.py
debian/: README.Debian  apt.conf  changelog  conffiles  config  control  copyright  postinst  postrm  preinst  prerm  rules  templates  templates.ca  templates.de  templates.es  templates.fi  templates.fr  templates.gl  templates.ko  templates.nl  templates.pl  templates.pt_BR  templates.sv
debian/po/: ca.po  cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  gl.po  it.po  ja.po  ko.po  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ru.po  sv.po  templates.pot  vi.po  zh_CN.po  zh_TW.po
intl/: Makefile.am
po/: Makefile  Makefile.in.in  POTFILES.in  apt-listchanges.pot  ca.mo  ca.po  cs.mo  cs.po  da.mo  da.po  de.mo  de.po  es.mo  es.po  et.mo  et.po  eu.po  fi.mo  fi.po  fr.mo  fr.po  gl.mo  gl.po  it.po  ja.mo  ja.po  nl.po  pl.mo  pl.po  pt_BR.mo  pt_BR.po  ru.mo  ru.po  sv.po  zh_CN.mo  zh_CN.po  zh_TW.mo  zh_TW.po
